# velliris

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  Makefile.coq.local  README.md  _CoqProject  coq-velliris.opam  obligations.org  opam-package-versions.txt  opam-switch-configs.txt  tasks.org
.github/workflows/: verify.yml
examples/: print_buffer.ast  print_buffer.ll  print_buffer_opt.ast  print_buffer_opt.ll
scripts/: setup.sh
theories/base_logic/: gen_heap_bij.v  gen_sim_heap.v  gen_sim_prog.v
theories/examples/: las.v  las2.v  las_orig.v  loop.v  notations.v
theories/logic/: satisfiable.v
theories/program_logic/: contextual.v  program_logic.v  reduction.v  sim_properties.v  simulation.v  weakbisim.v  weakest_pre.v  wellformedness.v
theories/simulation/: language.v  reduction.v  sim_properties.v  simulation.v  slsls.v  weakbisim.v
theories/utils/: no_event.v  tactics.v
theories/vir/: adequacy.v  bij_laws.v  compatibility.v  contextual.v  contextual_laws.v  contextual_mcfg.v  exp_laws.v  frame_laws.v  fundamental.v  fundamental_exp.v  fundamental_exp_relaxed.v  globalbij.v  heap.v  heapbij.v  hoare.v  instr_laws.v  interp_properties.v  logical_relations.v  mcfg_contextual.v  mcfg_contextual_proof.v  primitive_laws.v  spec.v  tactics.v  toplevel.v  util.v  val_rel.v  vir.v  vir_sim_properties.v  vir_state.v  vir_util.v
theories/vir/contextual/: block_contextual.v  contextual.v  contextual_mcfg.v  mcfg_contextual.v
theories/vir/examples/: examples.v  las.v  notations.v
theories/vir/lang/: heapbij.v  interp_properties.v  lang.v  notation.v  vir.v  (+4 more)
(+23 files in other folders)
