opam-version: "2.0"
maintainer: "Ralf Jung <jung@mpi-sws.org>"
authors: "Simuliris Authors"
homepage: "http://iris-project.org/"
bug-reports: "https://gitlab.mpi-sws.org/iris/simuliris/issues"
dev-repo: "git+https://gitlab.mpi-sws.org/iris/simuliris.git"

synopsis: "Local Simulation proofs, the Iris style"

depends: [
  "coq-iris" { (= "dev.2023-10-03.0.70b30af7") | (= "dev") }
  "coq-equations" { (= "1.3+8.17") | (= "1.3+8.18") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]

