opam-version: "2.0"
maintainer: "Irene Yoon <euisun.yoon@inria.fr>"
authors: "Irene Yoon"

synopsis: "Velliris: relational separation logic for LLVM IR"

depends: [
  "coq-iris" { (= "dev.2023-10-03.0.70b30af7") | (= "dev") }
  "coq-equations" { (= "1.3+8.17") | (= "1.3+8.18") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]

